Refactoriazcion de diferentes endpoints y metodos del service con transactional